--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "webpack-dev-server --hot --inline",
     "server": "nodemon ./testApp/server.js",
     "build": "webpack",
-    "test": "mocha --compilers js:babel-core/register  --recursive"
-  },
+    "test": "mocha --compilers js:babel-core/register --recursive -w test/helpers/browser.js ./testApp/tests/*.spec.js" },
   "author": "",
   "license": "ISC",
   "devDependencies": {
