--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cors": "^2.8.1",
     "desklamp": "0.0.7",
     "jquery": "^3.1.1",
+    "materialize-css": "^0.97.7",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   }
