--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jquery": "^3.1.1",
     "materialize-css": "^0.97.7",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-fontawesome": "^1.2.0"
   }
 }
